<resources>
    <string name="app_name">DOCUMENTS</string>
    <!-- Authorization's strings -->
    <string name="documents">Documents</string>
    <string name="login_button">LOG IN</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="register_button">REGISTER</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>

    <!--Hints-->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="aboutDocuments"><![CDATA[ "Documents" - mobile app, which deals with centralized document management. Out app can scan any document or download it from file manager in app. Out scanner working with openCV, which helps to scan document perfectly.]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>